<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivitySerials">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:text="@string/please_enter_serials"
        android:textSize="20sp"
        android:textColor="#600"
        style="@style/TextAppearance.AppCompat.Title"
        />
    <EditText
        android:id="@+id/et_textInput"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:gravity="center_horizontal|start"
        android:hint="@string/_1_serials"
        android:padding="10dp"
        android:textColor="#592"/>
    <EditText
        android:id="@+id/et_textInput_2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="20dp"
        android:gravity="center_horizontal|start"
        android:hint="@string/_2_serial"
        android:padding="10dp"
        android:textColor="#592"/>
    <EditText
        android:id="@+id/et_textInput_3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="20dp"
        android:gravity="center_horizontal|start"
        android:hint="@string/_3_serial"
        android:padding="10dp"
        android:textColor="#592"
        />
    <EditText
        android:id="@+id/et_textInput_4"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:layout_marginLeft="20dp"
        android:gravity="center_horizontal|start"
        android:hint="@string/_4_serial"
        android:padding="10dp"
        android:textColor="#592"
        />
    <EditText
        android:id="@+id/et_textInput_5"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:layout_marginLeft="20dp"
        android:gravity="center_horizontal|start"
        android:hint="@string/_5_serial"
        android:padding="10dp"
        android:textColor="#592"
        />

    <Button
        android:id="@+id/b_save_serial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="500dp"
        android:text="@string/save"
        />
    <Button
        android:id="@+id/b_back_serial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="550dp"
        />

</FrameLayout>