<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <Button
        android:id="@+id/b_films"
        android:layout_width="140dp"
        android:layout_height="77dp"
        android:text="@string/movies"
        android:layout_marginTop="350dp"
        android:layout_gravity="center_horizontal"
    />

    <Button
        android:id="@+id/b_serials"
        android:layout_width="140dp"
        android:layout_height="77dp"
        android:text="@string/serials"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="450dp"
    />

    <Button
        android:id="@+id/b_back"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="550dp"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="Please select movies or serials"
        android:textColor="#600"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"

        />

</FrameLayout>