<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="20dp"
    tools:context=".ThirdActivityFilms">
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/b_back"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/please_enter_movie"
        android:id="@+id/button_add"
        android:layout_marginTop="150dp"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
            android:id="@+id/linear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_add"
            android:layout_alignEnd="@+id/button_add"
            android:layout_alignRight="@+id/button_add"
            android:layout_marginTop="220dp"
            android:orientation="vertical">
    </LinearLayout>
    </ScrollView>
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/random_selection"
        android:id="@+id/button_random"
        android:layout_marginTop="100dp"
        />
</FrameLayout>